fixed some parallax issues and text background on mobile

--- a/website/static/css/text.css
+++ b/website/static/css/text.css
@@ -78,36 +78,3 @@ blockquote.classinfo section * {
 blockquote * {
     text-align: left;
 }
-
-@media only screen and (max-width: 900px) {
-    
-    h1 {
-        font-size: 36px;
-        margin: 18px;
-    }
-
-    h2 {
-        font-size: 32px;
-        margin:16px;
-    }
-
-    h3 {
-        font-size: 28px;
-        margin:14px;
-    }
-
-    h4 {
-        font-size: 24px;
-        margin: 12px;
-    }
-
-    h5 {
-        font-size: 20px;
-        margin: 10px;
-    }
-
-    h6 {
-        font-size: 16px;
-        margin: 8px;
-    }
-}
